<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="@drawable/dialog_rounded_bg">

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/title"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/lPriority"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvPriority"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/priority"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/priorityOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/_1"
            android:textAlignment="center"
            android:textColor="@color/priority1"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/priorityTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/_2"
            android:textAlignment="center"
            android:textColor="@color/priority2"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/priorityThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/_3"
            android:textAlignment="center"
            android:textColor="@color/priority3"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:paddingTop="15dp"
        android:paddingBottom="10dp"
        android:text="@string/task_not_done"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/ivCamera"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:adjustViewBounds="false"
        android:contentDescription="@string/camera_picture"
        android:cropToPadding="false"
        android:padding="30dp"
        android:scaleType="fitCenter"
        android:src="@android:drawable/ic_menu_camera" />

    <EditText
        android:id="@+id/etStartTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/start_time"
        android:clickable="true"
        android:focusableInTouchMode="false"
        android:hint="@string/start_time"
        android:inputType="none"
        android:textAlignment="center" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/category"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/sCategory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:textAlignment="center" />

    </LinearLayout>

    <Button
        android:id="@+id/btAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:padding="20dp"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        tools:layout_editor_absoluteY="258dp" />
</LinearLayout>